--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -27,6 +27,8 @@
     </li>
   </ul>
 </nav>
-<div class="container">
-  <router-outlet></router-outlet>
+<!-- trigger the animation -->
+<div class="container"
+      [@slideInAnimation]="o.isActivated ? o.activatedRoute: ''">
+  <router-outlet #o="outlet"></router-outlet>
 </div>
