--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -4,9 +4,16 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
   <a class="navbar-brand">{{pageTitle}}</a>
   <ul class="navbar-nav">
-    <li class="nav-item"><a class="nav-link"[routerLink]="['/welcome']" routerLinkActive="active">Home</a></li>
-    <li class="nav-item"><a class="nav-link"[routerLink]="['/products']" routerLinkActive="active" [routerLinkActiveOptions]="{ exact : true }">Product List</a></li>
-    <li class="nav-item"><a class="nav-link"[routerLink]="['/products', 0, 'edit']" routerLinkActive="active">Add Product</a></li>
+    <li class="nav-item"><a class="nav-link"
+         [routerLink]="['/welcome']"
+         routerLinkActive="active">Home</a></li>
+    <li class="nav-item"><a class="nav-link"
+         [routerLink]="['/products']"
+         routerLinkActive="active"
+         [routerLinkActiveOptions]="{ exact : true }">Product List</a></li>
+    <li class="nav-item"><a class="nav-link"
+         [routerLink]="['/products', 0, 'edit']"
+         routerLinkActive="active">Add Product</a></li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item"
@@ -18,9 +25,9 @@
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-        <!-- 2. activate the route -->
+      <!-- 2. activate the route -->
       <a class="nav-link"
-        [routerLink]="['/login']">Log In</a>
+         [routerLink]="['/login']">Log In</a>
     </li>
     <!-- 5. activate the route with code to navigate to  welcome page-->
     <li class="nav-item"
@@ -31,7 +38,17 @@
   </ul>
 </nav>
 <!-- trigger the animation -->
-<div class="container"
-      [@slideInAnimation]="o.isActivated ? o.activatedRoute: ''">
-  <router-outlet #o="outlet"></router-outlet>
+<div class="container">
+  <div class="row">
+    <!-- primary outet 10 column wide -->
+    <div class="col-md-10"
+         [@slideInAnimation]="o.isActivated ? o.activatedRoute: ''">
+      <router-outlet #o="outlet"></router-outlet>
+    </div>
+    <!-- secondary outlet 2 column wide -->
+    <div class="col-md-2">
+      <router-outlet name="popup"></router-outlet>
+    </div>
+
+  </div>
 </div>
